fix CR requests